--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "leaflet": "^1.6.0",
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue2-leaflet": "^2.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
+    "node-sass": "^4.13.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
